// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xTransfer transfer here should be correct config 1`] = `
{
  "extrinsic": "transfer",
  "getParams": [Function],
  "pallet": "xTransfer",
  "successEvent": "Deposited",
}
`;

exports[`xTransfer transfer here should get correct params 1`] = `
[
  {
    "fun": {
      "Fungible": 1000n,
    },
    "id": {
      "Concrete": {
        "interior": "Here",
        "parents": 0,
      },
    },
  },
  {
    "interior": {
      "X2": [
        {
          "Parachain": 1000,
        },
        {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      ],
    },
    "parents": 1,
  },
  {
    "proofSize": 0,
    "refTime": 5000000000,
  },
]
`;

exports[`xTransfer transfer x2 should be correct config 1`] = `
{
  "extrinsic": "transfer",
  "getParams": [Function],
  "pallet": "xTransfer",
  "successEvent": "Deposited",
}
`;

exports[`xTransfer transfer x2 should get correct params 1`] = `
[
  {
    "fun": {
      "Fungible": 1000n,
    },
    "id": {
      "Concrete": {
        "interior": {
          "X2": [
            {
              "Parachain": 1000,
            },
            {
              "PalletInstance": 99,
            },
          ],
        },
        "parents": 1,
      },
    },
  },
  {
    "interior": {
      "X2": [
        {
          "Parachain": 1000,
        },
        {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      ],
    },
    "parents": 1,
  },
  {
    "proofSize": 0,
    "refTime": 5000000000,
  },
]
`;
